Add stock_ids.csv
